--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+server.servlet.context-path=/
+#spring.main.allow-bean-definition-overriding=true
+spring.jpa.hibernate.use-new-id-generator-mappings=false
 
+## ??????
+debug=false
+spring.datasource.url=jdbc:mysql://localhost:3306/docker_demo?useUnicode=true&characterEncoding=UTF8&serverTimezone=GMT
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+## ???????????????????
+spring.jpa.hibernate.ddl-auto=update
+#????InnoDB??
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.datasource.sql-script-encoding=utf-8
+spring.jpa.show-sql=true
+#server.servlet.context-path=/api
